<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
    android:id="@+id/tv_enter_amount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/enter_amount"
    android:layout_gravity="center_horizontal|center_vertical"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:textSize="28sp"
    android:textStyle="bold"/>

    <EditText
        android:id="@+id/ed_enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_margin="10dp"
        android:gravity="end"
        android:layout_gravity="center_vertical|center_horizontal"
        android:hint="@string/hint_amount">
    <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ed_enter_rrn_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="end"
        android:hint="@string/hint_rrn"
        android:maxLength="12"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/ed_enter_cancel_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:hint="@string/hint_cancel_time"
        android:gravity="end"
        android:maxLength="12"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:layout_gravity="bottom|end"/>

</LinearLayout>